# OOP_C_plus

./: .gitignore  CMakeLists.txt  binary.txt  test.txt
LABS/: LAB8.cpp  Lab10.cpp  Lab4.cpp  Lab5.cpp  Lab6.cpp
advanced_C/: 1-pointers-to_class_members.cpp  10_list.cpp  11_1_templates_idea.cpp  11_2_templates_overloading.cpp  11_3_non_type_template_params.cpp  11_4_template_calculations.cpp  11_5_type_traits.cpp  11_6_variadic_templates.cpp  12_1_labdas.cpp  2-inheritance.cpp  3-multiply-inheritance.cpp  4-virtual-methods.cpp  5-dynamic-cast.cpp  6_1_exceptions_handling.cpp  6_2_exception_in_constructors.cpp  6_exceptions.cpp  7_vector.cpp  8_1_output_iterator.cpp  8_iterator.cpp  9_1_unique_ptr.cpp  9_2_shared_ptr.cpp  SFINAE.cpp  VectorOfNodes.cpp  VectorOfNodes.h
bash_scripts/: scrp1.sh  scrp2.sh  scrp3.sh  scrp4.sh
containers/: strings.cpp  vectors.cpp
ex-3-2-friends/: sum-of-colors.cpp  sum-of-distances.cpp  sum_of_memories.cpp
ex2-4-lambda-functions/: practise1.cpp  practise2.cpp  practise3.cpp  theory1.cpp  theory2.cpp
ex2-5-smart-pointers/: shared-ptr-theory.cpp  simple-linked-list-shared-ptr.cpp  stack-with-uniq-ptr.cpp  uniq-ptr-theory.cpp
ex2_3_files/: binary_files.cpp  theory1.cpp
ex2_6_methods_ot_of_class/: PointND.cpp  PointND.h  main.cpp  main_1.cpp
ex2_7_static_vars/: Point.cpp  Point.h  main.cpp  main_1.cpp  main_2.cpp
ex2_8_singlton/: Singleton.cpp  Singleton.h  main.cpp  main_1.cpp  main_2.cpp
ex2_9_const_meth_mutable/: main1.cpp  main2.cpp  main3.cpp
ex3-3-redef-rowna-sie/: DArray.cpp  DArray.h  absolute_value.cpp  main_dynamic_arrays.cpp  mega-theory.cpp  phone-book.cpp  rectangle.cpp
ex3-4-operator-square-bracets/: box3D.cpp  practise1.cpp
ex3-5-redef-ext-as/: practise1.cpp  practise2.cpp  practise3.cpp  practise4.cpp
ex3-6-decrement-increment/: practise_2.cpp  practise_3.cpp
ex3-7-decrement-increment/: practise_1.cpp  practise_3.cpp
ex3-7-functors/: functors_theory.cpp  practise_1_convert_to_int.cpp  practise_2_random_password.cpp
ex3-8-lvalue-rvalue-refs/: main.cpp  square-value.cpp  two-doubles-sum.cpp
ex3-9-move-const/: main.cpp
ex3_1_redef_plus/: main.cpp  main2.cpp  main3.cpp  sum-of-two-rectangles.cpp  sum_of_arrays.cpp
ex4-1-enheritance/: show-time.cpp  thing.cpp
ex4-2-inheritance/: animal.cpp  constructors-destructors.cpp  filter_water.cpp  theory.cpp  thing.cpp
ex4-3/: aiplane.cpp  printer.cpp
ex4-4-5virtual-methods-override-final-vdestr/: common-interface.cpp  employee.cpp  equipment.cpp  evolution-structure.cpp  function-interface.cpp  theory.cpp  thing-storage.cpp
ex4-4virtual-methods/: theory.cpp  thing-storage.cpp
ex4-6-pure-virt-functions-abstract-classes/: person-multiple-inheritance-practise.cpp  theory.cpp
ex4-7-multiply-inheritance/: mixins-pattern-imitation.cpp  multiply-inheritance-practise.cpp
ex4-8-dimond-inheritance/: practise-1.cpp  practise-2.cpp  theory .cpp
ex5-1-2-casts/: theory-const-reinterpret.cpp  theory-static-dynamic.cpp
ex5-1-casts/: theory-const-reinterpret.cpp
ex5-3-exceptions-1/: exceptions-theory.cpp  practise-1.cpp  practise-2.cpp  practise-3.cpp  practise-4.cpp  practise-5.cpp
ex5-4-exception-object/: exception-object-theory.cpp  exception-practise-1.cpp  practise-2.cpp
ex5-5-exception-types/: practise_1.cpp  theory.cpp
ex6-1-function-teplates/: practice1.cpp  practice2.cpp
ex6-2-function-templates-2/: practise1.cpp  practise2.cpp  practise3.cpp  theory.cpp
ex6-3-class-template/: practise1.cpp  practise2.cpp  theory1.cpp
kolokwium/: zad_1.cpp
