cmake_minimum_required(VERSION 3.30)
project(OOP)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP
        #        ex4-2-inheritance/theory.cpp
        #        ex4-2-inheritance/animal.cpp
        #        ex4-2-inheritance/thing.cpp
        #        ex4-2-inheritance/filter_water.cpp
        #         ex4-2-inheritance/constructors-destructors.cpp
        #       ex4-3/aiplane.cpp
        #      ex4-3/printer.cpp
        #ex4-4-5virtual-methods-override-final-vdestr/theory.cpp
        #ex4-4-5virtual-methods-override-final-vdestr/equipment.cpp
        # ex4-4-5virtual-methods-override-final-vdestr/evolution-structure.cpp
        # ex4-4-5virtual-methods-override-final-vdestr/common-interface.cpp
        #ex4-4-5virtual-methods-override-final-vdestr/employee.cpp
        ex4-6-pure-virt-functions-abstract-classes/theory.cpp
)
#ex4-4virtual-methods/function-interface.cpp
#ex4-4-5virtual-methods-override-final-vdestr/thing-storage.cpp)
#        ex3-3-redef-rowna-sie/DArray.cpp
#        ex2_6_methods_ot_of_class/main.cpp)