cmake_minimum_required(VERSION 3.30)
project(OOP)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP
        #ex4-6-pure-virt-functions-abstract-classes/person-multiple-inheritance-practise.cpp
        #ex4-7-multiply-inheritance/multiply-inheritance-practise.cpp
        #ex4-7-multiply-inheritance/mixins-pattern-imitation.cpp
        #ex4-8-dimond-inheritance/theory .cpp
        #-8-dimond-inheritance/practise-1.cpp
        #ex4-8-dimond-inheritance/practise-2.cpp
        #ex5-1-2-casts/theory-const-reinterpret.cpp
        #ex5-1-2-casts/theory-static-dynamic.cpp
        ex3-3-redef-rowna-sie/DArray.cpp
        #ex3-3-redef-rowna-sie/DArray.h
        ex3-3-redef-rowna-sie/main_dynamic_arrays.cpp
        #ex3-4-operator-square-bracets/practise1.cpp
        #ex3-4-operator-square-bracets/box3D.cpp
        #        ex4-2-inheritance/theory.cpp
        #        ex4-2-inheritance/animal.cpp
        #        ex4-2-inheritance/thing.cpp
        #        ex4-2-inheritance/filter_water.cpp
        #         ex4-2-inheritance/constructors-destructors.cpp
        #       ex4-3/aiplane.cpp
        #      ex4-3/printer.cpp
        #ex4-4-5virtual-methods-override-final-vdestr/theory.cpp
        #ex4-4-5virtual-methods-override-final-vdestr/equipment.cpp
        # ex4-4-5virtual-methods-override-final-vdestr/evolution-structure.cpp
        # ex4-4-5virtual-methods-override-final-vdestr/common-interface.cpp
        #ex4-4-5virtual-methods-override-final-vdestr/employee.cpp
        #ex4-6-pure-virt-functions-abstract-classes/theory.cpp
        #LABS/Lab6.cpp
)
#ex4-4virtual-methods/function-interface.cpp
#ex4-4-5virtual-methods-override-final-vdestr/thing-storage.cpp)
#        ex3-3-redef-rowna-sie/DArray.cpp
#        ex2_6_methods_ot_of_class/main.cpp)